--- a/video.html
+++ b/video.html
@@ -65,40 +65,44 @@
         <!-- main-banner  -->
         <section>
             <div class="main-banner relative truncate">
-                <div class="main-banner-background-image absolute top-0 left-[-7%] w-full h-full ">
-                    <img src="assets/body-images/banner-vector.png" alt="main banner image">
+                <div class="main-banner-background-image absolute top-0 left-[-7%] w-full h-full">
+                    <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
                 </div>
                 <div class="container mx-auto flex justify-center">
-                    <div class="w-10/12">
+                    <div class="w-10/12 lg:w-8/12 xl:w-10/12">
                         <div class="main-banner-container">
-                            <div class="w-full flex relative">
-                                <div class="star-background-image absolute top-[-6%] right-[15%]">
-                                    <img src="assets/body-images/star.png" alt="star">
+                            <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
+                                <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
+                                    <img src="assets/faceAdNecks-images/star.png" alt="star">
                                 </div>
                                 <div class="banner-first-image text-white">
-                                    <img src="assets/video-image/banner-image-1.png" alt="banner-image">
+                                    <img src="assets/video-image/banner-image-1.png" alt="banner-image" class="max-w-full">
                                 </div>
-                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant">VIDEOS</h2></div>
+                                <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
+                                  <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
+                                      <span class="block lg:inline-block">VIDEO</span>
+                                  </h2>
+                              </div>
                             </div>
-                            <div class="w-11/12 mt-4 relative">    
-                                <div class="leave-background-image absolute top-[-80%] right-[-20%]">
-                                    <img src="assets/body-images/leaves.png" alt="leaves">
+                            <div class="w-11/12 mt-4 relative">
+                                <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
+                                    <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
                                 </div>
-                                <div class="banner-second-part flex justify-between">
-                                    <div class="banner-second-text">
-                                        <div class="banner-p my-4">
-                                            <p class="text-white raleway">We use premium products for a <br> more natural result.</p>
+                                <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
+                                    <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
+                                        <div class="banner-p my-4 ">
+                                            <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
                                         </div>
-                                        <div class="banner-crub flex">
+                                        <div class="banner-crub flex justify-start lg:justify-start items-center">
                                             <div class="banner-crub-image mr-3">
-                                                 <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
+                                                <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
                                             </div>
                                             <p class="mr-3 text-white"> > </p>
-                                            <p class="text-white raleway">Videos</p>
+                                            <p class="text-white raleway">Video</p>
                                         </div>
                                     </div>
-                                    <div class="banner-second-image ">
-                                        <img src="assets/video-image/banner-image-2.png" alt="banner-image">
+                                    <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
+                                        <img src="assets/video-image/banner-image-2.png" alt="banner-image" class="max-w-full">
                                     </div>
                                 </div>
                             </div>
@@ -113,44 +117,48 @@
             <div class="video-section">
                 <div class="container mx-auto">
                     <div class="video-container flex justify-center">
-                        <div class="w-10/12">
+                        <div class="w-full md:w-10/12">
+                            <!-- Main Video Image -->
                             <div class="video-first-part">
                                 <div class="w-full">
-                                    <img src="assets/video-image/video-image-1.png" alt="video-image">
+                                    <img src="assets/video-image/video-image-1.png" alt="video-image" class="w-full h-auto rounded-lg">
                                 </div>
-                                <div class="w-full flex justify-between mt-3">
-                                    <div class="w-1/2 mr-1">
+                                <!-- Row 1 -->
+                                <div class="w-full flex flex-wrap justify-between mt-3">
+                                    <div class="w-full sm:w-[48%] mb-3">
                                         <div class="img">
-                                            <img src="assets/video-image/video-image-2.png" alt="video-image">
+                                            <img src="assets/video-image/video-image-2.png" alt="video-image" class="w-full h-auto rounded-lg">
                                         </div>
                                     </div>
-                                    <div class="w-1/2">
+                                    <div class="w-full sm:w-[48%] mb-3">
                                         <div class="img">
-                                            <img src="assets/video-image/video-image-3.png" alt="video-image">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="w-full flex justify-between mt-3">
-                                    <div class="w-1/2">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-4.png" alt="video-image">
-                                        </div>
-                                    </div>
-                                    <div class="w-1/2">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-5.png" alt="video-image">
+                                            <img src="assets/video-image/video-image-3.png" alt="video-image" class="w-full h-auto rounded-lg">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="w-full flex justify-between mt-3">
-                                    <div class="w-1/2">
+                                <!-- Row 2 -->
+                                <div class="w-full flex flex-wrap justify-between mt-3">
+                                    <div class="w-full sm:w-[48%] mb-3">
                                         <div class="img">
-                                            <img src="assets/video-image/video-image-6.png" alt="video-image">
+                                            <img src="assets/video-image/video-image-4.png" alt="video-image" class="w-full h-auto rounded-lg">
                                         </div>
                                     </div>
-                                    <div class="w-1/2">
+                                    <div class="w-full sm:w-[48%] mb-3">
                                         <div class="img">
-                                            <img src="assets/video-image/video-image-7.png" alt="video-image">
+                                            <img src="assets/video-image/video-image-5.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Row 3 -->
+                                <div class="w-full flex flex-wrap justify-between mt-3">
+                                    <div class="w-full sm:w-[48%] mb-3">
+                                        <div class="img">
+                                            <img src="assets/video-image/video-image-6.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        </div>
+                                    </div>
+                                    <div class="w-full sm:w-[48%] mb-3">
+                                        <div class="img">
+                                            <img src="assets/video-image/video-image-7.png" alt="video-image" class="w-full h-auto rounded-lg">
                                         </div>
                                     </div>
                                 </div>
