--- a/index.html
+++ b/index.html
@@ -78,56 +78,175 @@
     <main>
 
         <!-- main-banner  -->
-        <section>
-            <div class="main-banner relative truncate">
-                <div class="main-banner-background-image absolute top-0 left-[-7%] w-4/12 h-full ">
-                    <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
-                </div>
-                <div class="container mx-auto flex justify-center">
-                    <div class="w-10/12">
-                        <div class="main-banner-container">
-                            <div class="w-full flex relative items-center">
-                                <div class="star-background-image absolute top-[-6%] right-[15%]">
-                                    <img src="assets/faceAdNecks-images/star.png" alt="star">
-                                </div>
-                                <div class="banner-first-image text-white">
-                                    <img src="assets/images/banner-image-1.png" alt="banner-image">
-                                </div>
-                                <div class="banner-heading ml-8 ">
-                                     <p class="text-color raleway">Cosmetology clinic services</p>   
-                                    <h2 class="text-white font-64 cormorant">NATURAL BEAUTY</h2>
-                                </div>
+        <div class="swiper-container3">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <section>
+                        <div class="main-banner relative truncate">
+                            <div class="main-banner-background-image absolute top-0 left-[-7%] w-4/12 h-full">
+                                <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
                             </div>
-                            <div class="w-11/12 mt-4 relative">    
-                                <div class="leave-background-image absolute top-[-80%] right-[-20%]">
-                                    <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
-                                </div>
-                                <div class="banner-second-part flex justify-between">
-                                    <div class="banner-second-text">
-                                        <div class="banner-p my-4">
-                                            <p class="text-color raleway">We use premium products for a <br> more natural result.</p>
-                                        </div>
-                                        <div class="banner-crub flex relative items-center">
-                                            <div class="banner-crub-image mr-3">
-                                                <img src="assets/images/Ellipse-2.png" alt="Home">
+                            <div class="container mx-auto flex justify-center mb-10">
+                                <div class="w-10/12 lg:w-8/12 xl:w-10/12">
+                                    <div class="main-banner-container">
+                                        <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
+                                            <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/star.png" alt="star">
                                             </div>
-                                            <div class="star absolute top-[35%] left-[16%]">
-                                                <img src="assets/images/Star-1.png" alt="Home">
+                                            <div class="banner-first-image text-white">
+                                                <img src="assets/faceAdNecks-images/banner-image-1.png" alt="banner-image" class="max-w-full">
                                             </div>
-                                            <p class="mr-3 text-white"></p>
-                                            <p class="text-white -ml-2 raleway">Browse our craft</p>
+                                            <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
+                                                <p class="text-white raleway text-sm text-color">Cosmetology clinic services</p>
+                                                <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
+                                                  <span class="block lg:inline-block text-white font-bold">NATURAL</span>
+                                                  <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                              </h2>
+                                          </div>
                                         </div>
-                                    </div>
-                                    <div class="banner-second-image w-7/12">
-                                        <img src="assets/images/banner-image.png" alt="banner-image">
+                                        <div class="w-11/12 mt-4 relative">
+                                            <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
+                                            </div>
+                                            <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
+                                                <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
+                                                    <div class="banner-p my-4 ">
+                                                        <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
+                                                    </div>
+                                                    <div class="banner-crub flex justify-start lg:justify-start items-center">
+                                                        <div class="banner-crub-image mr-3">
+                                                            <img src="assets/images/Ellipse-2.png" alt="Home">
+                                                        </div>
+                                                        <div class="star absolute top-[65%] left-[3%]">
+                                                            <img src="assets/images/Star-1.png" alt="Home">
+                                                        </div>
+                                                        <p class="mr-3 text-white"></p>
+                                                        <p class="text-white -ml-2 raleway">Browse our craft</p>
+                                                    </div>
+                                                </div>
+                                                <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
+                                                    <img src="assets/faceAdNecks-images/banner-image-2.png" alt="banner-image" class="max-w-full">
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
+                </div>
+                <div class="swiper-slide">
+                    <section>
+                        <div class="main-banner relative truncate">
+                            <div class="main-banner-background-image absolute top-0 left-[-7%] w-4/12 h-full">
+                                <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
+                            </div>
+                            <div class="container mx-auto flex justify-center mb-10">
+                                <div class="w-10/12 lg:w-8/12 xl:w-10/12">
+                                    <div class="main-banner-container">
+                                        <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
+                                            <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/star.png" alt="star">
+                                            </div>
+                                            <div class="banner-first-image text-white">
+                                                <img src="assets/faceAdNecks-images/banner-image-1.png" alt="banner-image" class="max-w-full">
+                                            </div>
+                                            <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
+                                                <p class="text-white raleway text-sm text-color">Cosmetology clinic services</p>
+                                                <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
+                                                  <span class="block lg:inline-block text-white font-bold">NATURAL</span>
+                                                  <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                              </h2>
+                                          </div>
+                                        </div>
+                                        <div class="w-11/12 mt-4 relative">
+                                            <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
+                                            </div>
+                                            <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
+                                                <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
+                                                    <div class="banner-p my-4 ">
+                                                        <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
+                                                    </div>
+                                                    <div class="banner-crub flex justify-start lg:justify-start items-center">
+                                                        <div class="banner-crub-image mr-3">
+                                                            <img src="assets/images/Ellipse-2.png" alt="Home">
+                                                        </div>
+                                                        <div class="star absolute top-[65%] left-[3%]">
+                                                            <img src="assets/images/Star-1.png" alt="Home">
+                                                        </div>
+                                                        <p class="mr-3 text-white"></p>
+                                                        <p class="text-white -ml-2 raleway">Browse our craft</p>
+                                                    </div>
+                                                </div>
+                                                <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
+                                                    <img src="assets/faceAdNecks-images/banner-image-2.png" alt="banner-image" class="max-w-full">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div class="swiper-slide">
+                    <section>
+                        <div class="main-banner relative truncate">
+                            <div class="main-banner-background-image absolute top-0 left-[-7%] w-4/12 h-full">
+                                <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
+                            </div>
+                            <div class="container mx-auto flex justify-center mb-10">
+                                <div class="w-10/12 lg:w-8/12 xl:w-10/12">
+                                    <div class="main-banner-container">
+                                        <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
+                                            <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/star.png" alt="star">
+                                            </div>
+                                            <div class="banner-first-image text-white">
+                                                <img src="assets/faceAdNecks-images/banner-image-1.png" alt="banner-image" class="max-w-full">
+                                            </div>
+                                            <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
+                                                <p class="text-white raleway text-sm text-color">Cosmetology clinic services</p>
+                                                <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
+                                                  <span class="block lg:inline-block text-white font-bold">NATURAL</span>
+                                                  <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                              </h2>
+                                          </div>
+                                        </div>
+                                        <div class="w-11/12 mt-4 relative">
+                                            <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
+                                            </div>
+                                            <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
+                                                <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
+                                                    <div class="banner-p my-4 ">
+                                                        <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
+                                                    </div>
+                                                    <div class="banner-crub flex justify-start lg:justify-start items-center">
+                                                        <div class="banner-crub-image mr-3">
+                                                            <img src="assets/images/Ellipse-2.png" alt="Home">
+                                                        </div>
+                                                        <div class="star absolute top-[65%] left-[3%]">
+                                                            <img src="assets/images/Star-1.png" alt="Home">
+                                                        </div>
+                                                        <p class="mr-3 text-white"></p>
+                                                        <p class="text-white -ml-2 raleway">Browse our craft</p>
+                                                    </div>
+                                                </div>
+                                                <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
+                                                    <img src="assets/faceAdNecks-images/banner-image-2.png" alt="banner-image" class="max-w-full">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
-        </section>
+         </div> 
 
         <!-- product detail  -->
 
@@ -803,6 +922,20 @@
           navigation: {
             nextEl: '.swipers-button-next2',
             prevEl: '.swipers-button-prev2',
+          },
+          slidesPerView: 1,
+          spaceBetween: 30,
+          centeredSlides: true,
+          autoplay: {
+            delay: 5000,
+          },
+        });
+
+        var swiper2 = new Swiper('.swiper-container3', {
+          loop: true,
+          navigation: {
+            nextEl: '.swipers-button-next3',
+            prevEl: '.swipers-button-prev3',
           },
           slidesPerView: 1,
           spaceBetween: 30,
